--- a/samples/Cargo.toml
+++ b/samples/Cargo.toml
@@ -8,7 +8,7 @@ readme = "../README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-raylib = {git = "https://github.com/deltaphc/raylib-rs", branch = "three"}
+raylib = {git = "https://github.com/deltaphc/raylib-rs"}
 ptgui = {version = "0.1.1", path = "../"}
 
 [[bin]]
